# Autonomous-Rover

./: README.md  frames_2025-12-05_17.11.11.gv  gitignore
docs/: MIGRATION_GUIDE.md
src/warehouse_hmi/: package.xml  setup.cfg  setup.py
src/warehouse_msgs/: package.xml
src/warehouse_navigation/: package.xml  setup.py
src/warehouse_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
src/warehouse_navigation/config/maps/: my_map_save.pgm  my_map_save.yaml  my_map_serial.data  my_tl_map.pgm  my_tl_map.yaml  my_tl_map_serial.data
src/warehouse_navigation/description/: lidar.xacro  robot_core.xacro
src/warehouse_navigation/warehouse_navigation/: odom_raw_to_odom.py  odom_tf_broadcaster.py  odom_to_joint_state.py  scan_relay.py
src/warehouse_robot_bringup/: package.xml  setup.py
src/warehouse_robot_bringup/launch/: localization_launch.py  main_robot.launch.py  navigation_launch.py  rsp.launch.py
src/warehouse_scanning/: package.xml  setup.py
